# maxi-contract

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/maxi_farm/: Cargo.toml
programs/maxi_farm/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/maxi_farm/src/main_state/: event.rs  state.rs
programs/maxi_farm/src/main_state/ixs/: init_main_state.rs  mod.rs  transfer_ownership.rs  update_main_state.rs
programs/maxi_farm/src/pool/: ed25519.rs  event.rs  mod.rs  state.rs
programs/maxi_farm/src/pool/ixs/: buy.rs  create_pool.rs  force_complete.rs  mod.rs  sell.rs  update_tax.rs  withdraw.rs
programs/maxi_farm/src/referral/: event.rs  mod.rs  state.rs
programs/maxi_farm/src/referral/ixs/: claim.rs  mod.rs  register.rs
tests/: helper.ts  maxi_farm.ts
tests/connectivity/: constants.ts  error.ts  index.ts  pdas.ts  utils.ts
tests/connectivity/base/: baseSpl.ts  types.ts  utils.ts
tests/connectivity/types/: index.ts
